Bug 259422 - Kmail ignores trash folder setting. It moves deleted emails to the local trash folder.
Summary: Kmail ignores trash folder setting. It moves deleted emails to the local tras...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 2.1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 259587 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-12-10 10:38 UTC by Ian Stanistreet
Modified: 2011-10-31 17:38 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Stanistreet 2010-12-10 10:38:17 UTC
Version:           2.0.89 (using KDE 4.5.85) 
OS:                Linux

When the Akonadi IMAP resource 'trash folder' setting is set to an IMAP folder, KMail still uses the local trash folder when deleting an open email. Deleting a message from the message list works as expected, it is only when viewing an email and deleting it from the message window that it ignores the trash folder setting.

Reproducible: Always

Steps to Reproduce:
1. Set the trash folder setting of an IMAP resource. Select an IMAP directory within that resource to be used as the trash folder.
2. Open an email on the resource in the message window. Press the delete key.
3. Look in the configured trash folder. The deleted email is not there.
4. Look in the local trash folder. The deleted email is there.
5. Try again, this time selecting a message from the message list and pressing delete. This works as expected.

Actual Results:  
The local trash folder is used instead of the configured trash folder for the IMAP resource.

Expected Results:  
It should use the configured folder of course!
Comment 1 Christophe Marin 2010-12-20 17:54:35 UTC
Confirmed in trunk.
Comment 2 Malte S. Stretz 2011-05-10 13:52:24 UTC
Still in 2.0.95.
Comment 3 Andreas Schneider 2011-06-15 18:59:16 UTC
*** Bug 259587 has been marked as a duplicate of this bug. ***
Comment 4 Andreas Schneider 2011-06-15 19:00:25 UTC
This still doesn't work in KMail 2.1.0.

I can select the Trash folder on my IMAP folder, but if I delete a mail it is
moved to "Local Folders/trash".
Comment 5 Laurent Montel 2011-07-04 16:32:59 UTC
Work fine here.
Could you update kmail version please.
I can't reproduce this bug
Comment 6 Andreas Schneider 2011-07-06 06:33:06 UTC
I've tested it again. It's really strange some mails go to the 'Local Folders/trash' and some go to 'asn@cryptomilk.org/Trash'. I haven't figured out the criteria when it is moved to the local one.
Comment 7 Jan 2011-07-31 09:43:20 UTC
Duplicate of #277912
https://bugs.kde.org/show_bug.cgi?id=277912
Comment 8 Paolo Herms 2011-09-14 09:35:54 UTC
I've noticed that when I reset the folder it is used for some time, like 4-5 mails, and then it switches back to the default folder
Comment 9 Laurent Montel 2011-09-14 09:40:39 UTC
"reset the folder" ?
Comment 10 Paolo Herms 2011-09-14 09:45:33 UTC
(In reply to comment #9)
> "reset the folder" ?

I mean re-set, i.e. setting it to the default and then re-setting it to what I wanted.
Comment 11 Paolo Herms 2011-10-27 09:20:59 UTC
I also noticed that a message is moved to the local trash folder when I delete it from it's message window instead of the folder view, i.e. I open the message with double-click and then, when the dedicated message window has opened, I press "Del" or click the toolbar button "move to trashcan".
Really annoying, I hope we can do something to resolve this
Comment 12 Laurent Montel 2011-10-27 09:33:34 UTC
Ok I confirm that when we delete message from reader view it moved to local trash folder => not good.
Will look at it.
Comment 13 Laurent Montel 2011-10-31 17:37:49 UTC
Git commit 08c81841d46b9552bf761a0b7c1ef18911366242 by Montel Laurent.
Committed on 31/10/2011 at 18:37.
Pushed by mlaurent into branch 'master'.

Fix Bug 259422 - Kmail ignores trash folder setting. It moves deleted emails to the local trash folder.

FIXED-IN: 4.7.4
BUG: 259422

M  +4    -1    kmail/kmmainwidget.cpp
M  +14   -6    kmail/kmreadermainwin.cpp
M  +5    -4    kmail/kmreadermainwin.h
M  +7    -0    mailcommon/mailutil.cpp
M  +3    -0    mailcommon/mailutil.h

http://commits.kde.org/kdepim/08c81841d46b9552bf761a0b7c1ef18911366242
Comment 14 Laurent Montel 2011-10-31 17:38:47 UTC
Git commit fe02f2e13db4e65c6f2ebbfaa13bdf10627042f9 by Montel Laurent.
Committed on 31/10/2011 at 18:37.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 259422 - Kmail ignores trash folder setting. It moves deleted emails to the local trash folder.

FIXED-IN: 4.7.4
BUG: 259422
(cherry picked from commit 08c81841d46b9552bf761a0b7c1ef18911366242)

M  +4    -1    kmail/kmmainwidget.cpp
M  +14   -6    kmail/kmreadermainwin.cpp
M  +5    -4    kmail/kmreadermainwin.h
M  +7    -0    mailcommon/mailutil.cpp
M  +3    -0    mailcommon/mailutil.h

http://commits.kde.org/kdepim/fe02f2e13db4e65c6f2ebbfaa13bdf10627042f9