Fix Bug 259422 - Kmail ignores trash folder setting. It moves deleted emails to the local trash folder.

FIXED-IN: 4.7.4
BUG: 259422